Bug fixes & script file add

--- a/appsettings.json
+++ b/appsettings.json
@@ -34,10 +34,22 @@
   },
 
   "GeminiSettings": {
-    "ApiKey": "111111111111", //gemini
+    "ApiKey": "Place your api key here", //gemini
     "Model": "gemini-1.5-flash", // or "gemini-pro"
     "basicPrompt": "You're a smart system. Given a user's task title or description, extract only meaningful technical keywords (not all words), and infer related skills. Ignore generic terms like 'change', 'implement', 'task', or 'project' unless they imply a technical concept. Limit skills to: (ASP .Net MVC, ASP NET.CORE, ASP.NET Webapi, ASP. Net Webforms, C#, CSS, Entity Framework, HTML, JavaScript, jQuery, SQL). Output in this format: <keyword1> - <skill1>, <skill2>. One line per keyword. If one keyword maps to multiple skills, separate them by commas. Be accurate and concise. If the user’s task description is not meaningful, return: please provide a valid task description. User's task description: \""
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://0.0.0.0:5001",
+        "Protocols": "Http1AndHttp2"
+      },
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
   }
+
 
 
 }
