Revert "UI/UX changesReview changes"
This reverts commit aa706b0939ec042682c2e973463612ac168901e5.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=DevTaskFlow;Trusted_Connection=True;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server=db26067.databaseasp.net; Database=db26067; User Id=db26067; Password=5Pc?#8Kb7o%G; Encrypt=False; MultipleActiveResultSets=True;"
   },
 
   "Serilog": {
@@ -35,7 +34,7 @@
   },
 
   "GeminiSettings": {
-    "ApiKey": "AIzaSyAte2B_inSyYnDte2A7I7HGlB3WIBIfkng", //gemini
+    "ApiKey": "Place your api key here", //gemini
     "Model": "gemini-1.5-flash", // or "gemini-pro"
     "basicPrompt": "You're a smart system. Given a user's task title or description, extract only meaningful technical keywords (not all words), and infer related skills. Ignore generic terms like 'change', 'implement', 'task', or 'project' unless they imply a technical concept. Limit skills to: (ASP .Net MVC, ASP NET.CORE, ASP.NET Webapi, ASP. Net Webforms, C#, CSS, Entity Framework, HTML, JavaScript, jQuery, SQL). Output in this format: <keyword1> - <skill1>, <skill2>. One line per keyword. If one keyword maps to multiple skills, separate them by commas. Be accurate and concise. If the user’s task description is not meaningful, return: please provide a valid task description. User's task description: \""
   },
